--- a/mi.css
+++ b/mi.css
@@ -77,7 +77,7 @@ header>div:first-child {
     display: inline-block;
     height: 20px;
     width: 20px;
-    background-image: url(http://thyrsi.com/t6/359/1534587756x-1376440240.png);
+    background-image: url(./picture/cart-1.png);
     background-size: auto 100%;
     background-repeat: no-repeat;
     vertical-align: -4px;
@@ -113,7 +113,7 @@ header>div:first-child {
 }
 
 .cart:hover div {
-    background-image: url(http://thyrsi.com/t6/359/1534587867x-1376440156.png);
+    background-image: url(./picture/cart-2.png);
     transition: all 0.2s 0.1s linear;
 }
 
@@ -151,7 +151,7 @@ header>div:first-child {
     width: 55px;
     height: 55px;
     background-color: #ff6700;
-    background-image: url(https://s01.mifile.cn/i/mi-logo.png);
+    background-image: url(./picture/mi-logo.png);
     vertical-align: middle;
     background-position: center;
     margin-right: 90px;
@@ -622,7 +622,7 @@ header>div:first-child {
     border: 1px solid #e0e0e0;
     border-left: none;
     background-color: white;
-    background-image: url(http://thyrsi.com/t6/359/1534587626x1822611251.png);
+    background-image: url(./picture/search.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: auto 25px;
@@ -866,7 +866,7 @@ header>div:first-child {
     background-size: auto 50%;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(http://thyrsi.com/t6/359/1534588078x-1376440240.png);
+    background-image: url(./picture/more.png);
 }
 
 
